fix: lower the font size of the h1 for the smallest screen sizes because it was causing horizontal scroll. Raise font size in media query at 450px.

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -8,10 +8,16 @@ header {
 .title {
   margin: 0;
   color: var(--darkPurple, #321947);
-  font-size: 2.2rem;
+  font-size: 1.9rem;
 }
 
 .inspectocat {
   width: 75px;
   margin-right: 1rem;
+}
+
+@media screen and (min-width: 450px) {
+  .title {
+    font-size: 2.2rem;
+  }
 }
